[project]
name = "ev2gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.1",
    "gymnasium~=0.29.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib~=3.7",
    "networkx~=3.0",
    "numpy~=1.23",
    "pandas~=2.0",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0",
    "stable-baselines3[extra]>=2.6.0",
]
