[project]
name = "ev2gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.1",
    "gymnasium~=0.29.0",
    "networkx~=3.0",
    "numpy~=1.23",
    "pandas~=2.0",
    "pyyaml>=6.0.2",
    "stable-baselines3[extra]>=2.6.0",
]
